# Mp3Encoder

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_demo_jni_Hello.h  mp3-encoder.h  native-lib.cpp
app/src/main/cpp/libmp3lame/: machine.h
app/src/main/java/com/demo/jni/: A.kt  Hello.java  Mp3Activity.kt  Mp3Encoder.java
app/src/main/java/com/demo/jni/jni/: Android.mk  Application.mk  mp3-encoder.cpp
app/src/main/res/layout/: activity_mp3.xml
gradle/wrapper/: gradle-wrapper.properties
